# elan

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  codemeta.json  setup.cfg
ELAN/: __about__.py  __init__.py  metadata.txt  permeability_panel.py  plugin_main.py  snap_buildings_to_roads.py
ELAN/gui/: dlg_settings.py  dlg_settings.ui
ELAN/mla_model/: MIG_DISCRETIZATION.py  MIG_EFFECTIVE_RAIN.py  MIG_GENERIC_FLOW.py  MIG_II.py  MIG_RAIN_TYPE.py  MIG_RUNOFF_PRODUCTION.py  MIG_TOOLBOX.py  MIG_TRANSFERED_FLOW.py  MIG_UPSTREAM_FLOW.py  MIG_WASTEWATER.py
ELAN/processing/: assessment.py  comparison.py  economical.py  hydraulic.py  lca.py  population.py  projection.py  provider.py  roads_buildings.py  scenario.py  sewer_network.py  snap_on_roads.py  trench_profile.py  utils.py  wetland_process.py
ELAN/resources/i18n/: ELAN.pro  ELAN_fr.qm  ELAN_fr.ts
ELAN/resources/pysewer/: pysewer.patch  pysewer_launcher.py  pysewer_requirements.txt
ELAN/resources/wetlandoptimizer/: wetlandoptimizer.patch  wetlandoptimizer_requirements.txt
ELAN/scripts/: snap_on_roads.py  treatment_train_plot.py
ELAN/toolbelt/: log_handler.py  preferences.py
ELAN/utils/: db_utils.py  dependencies_utils.py  qgis_utils.py  tr.py
docs/: comparaison.rst  conf.py  create_scenario_flowchart.en.mmd  create_scenario_flowchart.mmd  evaluation.rst  global_flowchart.en.mmd  global_flowchart.mmd  global_index.html.ref  index.rst  installation.rst  introduction.rst  logigramme_global1.rst  logigramme_prb1.rst  logigramme_preparation1.rst  logigramme_scenario1.rst  multi_lang_build.sh  petite_anse.rst  preparation.rst  preparation_flowchart.en.mmd  preparation_flowchart.mmd  scenario_prb1.rst  scenario_prb2.rst
docs/_templates/: globaltoc.html  globaltoc.html.ref
requirements/: development.txt  documentation.txt  elan.txt  packaging.txt  testing.txt
scripts/: sync_codemeta_json.py
tests/: conftest.py  test_all_processings.py  test_dependencies_utils.py  test_log_handler.py  test_plg_metadata.py  test_plugin_main.py  test_population.py  test_projection.py  test_pysewer_launcher.py  test_roads_buildings.py  test_sewer_network.py  test_snap_on_roads.py  test_treatment_train_plot.py  test_trench_profile.py  test_wetland_process.py  utils.py
(+73 files in other folders)
