# -- Packaging --------------------------------------
[metadata]
description-file = README.md

[qgis-plugin-ci]
plugin_path = ELAN

# -- Code quality ------------------------------------

[pylint.MASTER]
ignore = resources.py
ignore-paths = docs/conf.py
jobs = 2
suggestion-mode = yes
extension-pkg-whitelist = PyQt5

[pylint.REPORTS]
output-format=text

[pylint.FORMAT]
max-line-length = 120
ignore-long-lines=^\s*(# )?<?https?://\S+>?$
max-module-lines=1000

[pylint.TYPECHECK]
ignored-modules = qgis, qgis.core, qgis.gui, qgis.utils, qgis.analysis,
                  qgis.PyQt, qgis.PyQt.QtCore, qgis.PyQt.QtWidgets, qgis.PyQt.QtGui

[pylint.BASIC]
variable-naming-style = snake_case
argument-naming-style = snake_case
class-naming-style = PascalCase
const-naming-style = UPPER_CASE
module-naming-style = snake_case
attr-naming-style = snake_case
good-names = x, y, z, i, j, e, _, __init__, __main__
method-rgx = ^(__)?[a-z]+[a-zA-Z0-9]*$
function-rgx = ^(test_)?[a-z]+[a-zA-Z0-9]*$
class-attribute-rgx = [a-z]*[_a-zA-Z0-9]*$

[pylint.DESIGN]
max-args=5
ignored-argument-names=_.*
max-locals=15
max-returns=6
max-branches=12
max-statements=50
max-parents=7
max-attributes=7
min-public-methods=2
max-public-methods=20

[pylint.CLASSES]
# List of method names used to declare (i.e. assign) instance attributes.
defining-attr-methods=__init__,__new__,setUp,initGui

[isort]
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
line_length = 120
multi_line_output = 3
profile = black
use_parentheses = True

# -- Tests ----------------------------------------------
[tool:pytest]
addopts =
    --junitxml=junit/test-results.xml
    --cov-config=setup.cfg
    --cov=ELAN
    --cov-report=xml
    --cov-report=html
    --cov-report=term
junit_family = xunit2
minversion = 5.0
norecursedirs = .* build dev development dist docs CVS fixtures _darcs {arch} *.egg venv _wip
python_files = test_*.py
testpaths = tests

[coverage:run]
branch = True
omit =
    .venv/*
    *tests*
    ELAN/external_libraries/*
    ELAN/mla_model/*

[coverage:report]
exclude_lines =
    if self.debug:
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:

ignore_errors = True
show_missing = True
